--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,14 @@
 /* Global Styles */
 
 body {
-  color: #5a5a5a;
+  color: white;
   font-family: 'Roboto', sans-serif;
   background-color: #252525;
 }
 
-main {
-  padding-bottom: 15px;
-}
-
 .container{
-  padding-top: 20px;
+  padding-top: 30px;
   max-width: 900px;
-}
-
-.container .navi{
-  max-width: 850px;
 }
 
 .divider {
@@ -27,10 +19,130 @@ main {
 .footer {
   background-color: black;
   font-size: 13px;
+  height: 70px;
 }
+
+.pad-b1{
+  padding-bottom:15px;
+}
+.pad-t1{
+  padding-top:10px;
+}
+
+.top-banner {
+  height: 50px;
+  background-color: #525252;
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+  padding-top: 15px;
+}
+
+.cv-btn {
+  background: #ca3428;
+  border-radius: 10px;
+  color: var(--text-white);
+  padding: 0.5rem 0.8rem;
+  display: inline-block;
+  margin: .5rem 0;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.cv-btn:hover {
+  background: var(--red);
+}
+
+/* Typography */
 
 p {
   font-size: 16px;
+}
+
+.more-head {
+  font-size: 38px;
+  font-weight: bold;
+}
+
+.more-head2 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+
+/* More Page CSS*/
+
+.svg-area {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+    width: 100%;
+}
+
+svg {
+    width: 45px;
+}
+
+.spacing {
+    margin-bottom: 30px;
+    text-align: left;
+    width: 100px;
+}
+
+.stack-name {
+    padding: 10px 0;
+    font-size: 14px;
+}
+
+/* Contact Form*/
+
+.contact .contact-form form {
+  color: var(--text-darker);
+  font-size: 1rem;
+  width: 100%;
+  margin: auto;
+}
+
+.contact .contact-form form input,
+.contact .contact-form form textarea {
+  display: block;
+  width: 100%;
+  padding: 0.4rem 1rem;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: none;
+  margin-bottom: 0.5rem;
+  outline: none;
+  max-width: 100%;
+  min-width: 100%;
+}
+
+.contact .contact-form form label {
+  margin: 1rem 0;
+}
+
+.contact .contact-form form button {
+  border: none;
+  width: 100%;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 1rem auto;
+}
+
+
+.hero-cta {
+  background: #ca3428;
+  border-radius: 50px;
+  color: var(--text-white);
+  padding: 0.5rem 2rem;
+  display: inline-block;
+  font-size: 1.3rem;
+  margin: 1rem 0;
+  cursor: pointer;
+}
+
+.hero-cta:hover {
+  background: var(--red);
 }
 
 
@@ -51,6 +163,7 @@ main a {
 .footer a {
   color: #ffd700;
 }
+
 .no-deco a{
   color: inherit;
 }
@@ -78,6 +191,16 @@ main a {
   position: relative;
 }
 
+.hero-image2 {
+  background-image: url("./assets/img/more-bg.jpg");
+  background-color: rgba(0,0,0,0.5);
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
 .hero-text {
   text-align: center;
   position: absolute;
@@ -90,7 +213,6 @@ main a {
 /* Navbar */
 
 nav {
-    padding: 10px 0;
     display: flex;
     justify-content: space-between;
 }
@@ -229,6 +351,9 @@ ul.work-with li:before {
   text-transform: none !important;
 }
 
+.work-with img {
+  height: 50px;
+}
 
 /* Social Icons */
 
@@ -285,3 +410,7 @@ ul.work-with li:before {
 .social-icons .fa-reddit, .social-icons .fa-reddit-alien{background-color:#FF4500;}
 .social-icons .fa-telegram,.social-icons .fa-telegram-plane{background-color:#0088CC;}
 .fa-twitter {color:#32CCFE;}
+
+.card-text {
+  color: black;
+}
